--- a/proyectos.html
+++ b/proyectos.html
@@ -64,7 +64,7 @@
                             <span class="project-tag">JS</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://emarcos340-commits.github.io/web-c-fundamentos-desarrollo-web/08-proyecto-final/"
+                            <a href="https://nvidia-website-redesign.vercel.app/"
                                 class="project-link" target="_blank">Ver Proyecto</a>
                         </div>
                     </div>
@@ -150,5 +150,6 @@
     <script src="js/navigation.js"></script>
     <script src="js/main.js"></script>
 </body>
+
 
 </html>
